laba_2_fixed_getenter

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,11 +6,11 @@
             "name": "Запуск C++ программы",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/lec_02/lec_02_01/sh.test.exe",
+            "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
             "args": [],
-            "preLaunchTask": "build_sh_test",
+            "preLaunchTask": "C/C++: gcc.exe build active file",
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/lec_02/lec_02_01",
+            "cwd": "${fileDirname}",
             "environment": [],
             "externalConsole": true,
             "MIMode": "gdb",
