--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,9 @@
         "streambuf": "cpp",
         "text_encoding": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "cstring": "cpp",
+        "fstream": "cpp",
+        "iomanip": "cpp"
     }
 }
