--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,9 +26,12 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
-                "${file}",
+                // Явно указываем все .cpp файлы проекта. Это самый надежный способ.
+                "${fileDirname}/main.cpp",
+                "${fileDirname}/_methods.cpp",
+                "${fileDirname}/fraction_exception.cpp",
                 "-o",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe"
+                "${fileDirname}/main.exe"
             ],
             "options": {
                 "cwd": "${fileDirname}"
